# Terminus-Math

./: CMakeLists.txt  README.md
include/: mat3.h  mat4.h  quat.h  simd_float4.h  simd_mat4.h  simd_mat4x4.h  simd_mat4x8.h  simd_vec4.h  simd_vec4x4.h  simd_vec4x8.h  transform.h  utility.h  vec2.h  vec3.h  vec4.h
test/: main.cpp
